# trevanquant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
scripts/: deploy.sh  run_trevanquant.py  test_data_fetch.py  test_indicators.py  test_report.py  test_scheduler.py
src/trevanquant/analysis/: CLAUDE.md
src/trevanquant/database/: CLAUDE.md  connection.py  crud.py  migrations.py  models.py
src/trevanquant/report/: CLAUDE.md  email_service.py  generator.py
src/trevanquant/scheduler/: CLAUDE.md  __init__.py  runner.py  task_scheduler.py
src/trevanquant/utils/: CLAUDE.md  config.py  logger.py
